<?xml version="1.0"?>
<package>
  <name>roch_web_teleop_tutorials</name>
  <version>0.0.1</version>
  <description>The roch teleop tutorials package</description>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <author email="wzhang@softrobtech.com">Carl</author>
  <url type="website">http://ros.org/wiki/roch_web_tutorials</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_web/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_web</url>
  

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
